cert-manager-chart.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
