rancher-backup.chart.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-resources-system
