rancher-chart.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-system
